Fixed blurring in some versions of firefox.

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -429,10 +429,6 @@ div.quote span.quote-mark {
     border: solid 1px rgba(207,223,233,0.05);
 }
 
-.badges img {
-    filter: blur(15px);
-}
-
 .center {
     text-align: center;
 }
